--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <meta charset='utf-8'/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-        <meta name="viewport" content="width=device-width"/>
+        <meta name="HandheldFriendly" content="True">
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="format-detection" content="telephone=no">
+        <meta http-equiv="cleartype" content="on">
         <title>mob N tv</title>
         <link rel="stylesheet" href="js/lungo.css">
         <link rel="stylesheet" href="js/lungo.icon.css">
