--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="format-detection" content="telephone=no">
         <meta http-equiv="cleartype" content="on">
+
         <title>mob N tv</title>
         <link rel="stylesheet" href="js/lungo.css">
         <link rel="stylesheet" href="js/lungo.icon.css">
@@ -18,7 +19,12 @@
     </head>
     <body>
         <section id="dashboard">
-            <header data-title="Favorite"></header>
+            <header data-title="Favorite">
+                <nav>
+                    <a href="#" data-icon="heart" data-view-article="favourite" data-title="Favorite" class="active"></a>
+                    <a href="#" data-icon="list" data-view-article="list" data-title="List"></a>
+                </nav>
+            </header>
             <article id="favourite" class="active">
             </article>
             <article id="list">
