Added class toolbar to footer and changed meta

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset='utf-8'/>
+        <!-- Mobile viewport optimization http://goo.gl/b9SaQ -->
         <meta name="HandheldFriendly" content="True">
-        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="format-detection" content="telephone=no">
+        <meta name="MobileOptimized" content="320">
         <meta http-equiv="cleartype" content="on">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
         <title>mob N tv</title>
         <link rel="stylesheet" href="js/lungo.css">
@@ -29,7 +30,7 @@
             </article>
             <article id="list">
             </article>
-            <footer>
+            <footer class="toolbar">
                 <nav>
                     <a href="#" data-icon="heart" data-view-article="favourite" data-title="Favorite" class="active"></a>
                     <a href="#" data-icon="list" data-view-article="list" data-title="List"></a>
