--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#" data-icon="list" data-view-article="list" data-title="List"></a>
                 </nav>
             </header>
-            <article id="favourite" class="active list scrollable">
+            <article id="favourite" class="active list scroll">
             <ul>
                 <li>some li</li>
                 <li>some li</li>
