--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <a href="#" data-icon="list" data-view-article="list" data-title="List"></a>
                 </nav>
             </header>
-            <article id="favourite" class="active list">
-            <scroll>
+            <article id="favourite" class="active list scroll">
             <ul>
                 <li>#1</li>
                 <li>#2</li>
@@ -230,7 +229,6 @@
                 <li>#199</li>
                 <li>#200</li>
             </ul>
-            </scroll>
             </article>
             <article id="list">
             </article>
